--- a/.gitignore
+++ b/.gitignore
@@ -144,7 +144,8 @@ Desktop.ini
 node_modules
 .tmp
 .sass-cache
-/bower_components
+src/bower_components
+/src/bower_components
 bower_components
 .idea
 ./idea
