--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "AjudeMais-Web",
-  "version": "1.0-IT06",
+  "version": "1.0",
   "description": "módulo web do Ajude Mais",
   "main": "app.js",
   "scripts": {
@@ -30,5 +30,8 @@
     "gulp-wrap": "0.13.0",
     "run-sequence": "1.2.2",
     "url": "0.11.0"
+  },
+  "engines": {
+    "node": "6.9.2"
   }
 }
