alterando nomeclatura de versão para funcioanar no heroku

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "AjudeMais-Web",
+  "name": "ajudemais-web",
   "version": "1.0",
-  "description": "módulo web do Ajude Mais",
+  "description": "modulo web do ajude mais",
   "main": "app.js",
   "scripts": {
     "start": "node app.js"
