--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ajudemaisweb",
+  "name": "ajudemais-web",
   "version": "1.0.1",
   "description": "modulo web do ajude mais",
   "main": "app.js",
@@ -7,11 +7,13 @@
     "start": "node app.js"
   },
   "author": "Franck Aragao",
+  "dependencies": {
+    "express": "4.15.2"
+  },
   "devDependencies": {
     "bower": "1.8.0",
     "browser-sync": "2.18.8",
     "del": "2.2.2",
-    "express": "4.15.2",
     "gulp": "3.9.1",
     "gulp-angular-filesort": "1.1.1",
     "gulp-angular-templatecache": "2.0.0",
