--- a/package.json
+++ b/package.json
@@ -3,13 +3,15 @@
   "version": "1.0.1",
   "description": "modulo web do ajude mais",
   "main": "app.js",
+  "author": "Franck Aragão <fjunior.aragao@gmail.com>",
   "scripts": {
     "start": "node app.js"
   },
-  "author": "Franck Aragao",
+
   "dependencies": {
     "express": "4.15.2"
   },
+
   "devDependencies": {
     "bower": "1.8.0",
     "browser-sync": "2.18.8",
