--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@
 /target/www/**
 /src/test/javascript/coverage/
 /src/test/javascript/PhantomJS*/
+/dist
+.package-lock.json
 
 ######################
 # Node
