--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gulp-angular-templatecache": "2.0.0",
     "gulp-clean-css": "3.0.4",
     "gulp-concat": "2.6.1",
+    "gulp-gh-pages": "^0.5.4",
     "gulp-htmlmin": "3.0.0",
     "gulp-inject": "4.2.0",
     "gulp-minify": "0.0.15",
