using npm to deploy

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "app.js",
   "author": "Franck Aragão <fjunior.aragao@gmail.com>",
   "scripts": {
-    "start": "node app.js"
+    "start": "node app.js",
+    "deploy": "gulp build gulp deploy"
   },
   "dependencies": {
     "express": "4.15.2"
